--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -3,12 +3,14 @@
 		padding: 20px;
 		min-width: 100%;
 		font-size: 30px;
+		margin-bottom: 30px;
 	}
 	.definitions{
 		padding : 30px 0;
 		.meaning{
-			font-size : 18px;
+			font-size : 20px;
 			padding : 10px 0;
+			font-weight: bold;
 		}
 		.attribution{
 			font-size : 12px;
