--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,17 +3,19 @@
   padding: 20px;
   min-width: 100%;
   font-size: 30px;
+  margin-bottom: 30px;
 }
-/* line 7, ../sass/main.scss */
+/* line 8, ../sass/main.scss */
 .container .definitions {
   padding: 30px 0;
 }
-/* line 9, ../sass/main.scss */
+/* line 10, ../sass/main.scss */
 .container .definitions .meaning {
-  font-size: 18px;
+  font-size: 20px;
   padding: 10px 0;
+  font-weight: bold;
 }
-/* line 13, ../sass/main.scss */
+/* line 15, ../sass/main.scss */
 .container .definitions .attribution {
   font-size: 12px;
   padding: 0 0 20px 0;
